[package]
name = "mm"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.26"
log4rs = "1.3.0"
chrono = "0.4.40"
urlencoding = "2.1.3"
serde_json = "1.0"
# sea-orm = "1.1.3"
# canyon_sql = "0.5.1"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
rayon = "1.10.0"
actix-web = "4.10.2"
regex = "1.11.1"
futures = "0.3.31"
bytes = "1.10.1"
# md5 = "0.7.0"
percent-encoding = "2.3.1"
lazy_static = "1.5.0"
rust-crypto = "0.2.36"
anyhow = "1.0.98"
actix-web-codegen = "4.3.0"
# diesel = { version = "2.2.6", features = ["postgres"] }

# [dependencies.deadpool-tiberius]
# version = "0.1.8"
# features = ["bigdecimal", "chrono", "native-tls", "opentls", "rust_decimal"]
# features = ["bigdecimal", ,"chrono","native-tls","opentls","rust_decimal","rustls","sql-browser","tds73","time","winauth"]
# [dependencies.axum]
# version = "0.8.1"
# features = ["json"]

[dependencies.tokio]
version = "1.44.1"
features = ["full"]

[dependencies.tiberius]
version = "0.12.3"
features = ["rust_decimal"]

[dependencies.reqwest]
version = "0.12.14"
features = ["json", "multipart"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.3"
features = ["chrono", "runtime-async-std", "rust_decimal", "postgres", "json"]

[dependencies.welds]
version = "0.4.13"
features = ["postgres", "mysql"]
# features = ["mssql", "postgres", "mysql"]

[dependencies.welds-connections]
version = "0.4.13"
features = ["postgres", "mysql"]
# features = ["mssql", "mssql-rust_decimal", "postgres", "mysql"]

[dependencies.uuid]
version = "1.16.0"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
