[package]
name = "node-html-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]
# wasm feature: disable rayon usage by not enabling parallel, add wasm related helpers
wasm = ["wasm-bindgen", "console_error_panic_hook"]

[dependencies]
regex = "1.11.1"
futures = "0.3.31"
percent-encoding = "2.3.1"
anyhow = "1.0.98"
wasm-bindgen = { version = "0.2", optional = true }
# rayon 放到可选
rayon = { version = "1.10.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
html-escape = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
