[package]
name = "node-html-parser"
version = "0.1.1"
edition = "2021"
description = "Fast HTML parser for Rust & WASM producing a lightweight DOM with CSS selector querying."
license = "MIT"
repository = "https://github.com/taoqf/node-html-parser-rs"
documentation = "https://docs.rs/node-html-parser"
readme = "README.md"
keywords = ["html", "parser", "dom", "css", "wasm"]
categories = ["parser-implementations", "web-programming", "wasm"]
# Trim crate size: exclude build artefacts, dumps, generated wasm pkg, local scripts & db
exclude = ["core.*", "scripts/*", "db/*", "init.d/*", "target/*", "pkg/*"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]
# wasm feature: disable rayon usage by not enabling parallel, add wasm related helpers
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys"]

[dependencies]
regex = "1.11.1"
js-sys = { version = "0.3", optional = true }
futures = "0.3.31"
percent-encoding = "2.3.1"
anyhow = "1.0.98"
wasm-bindgen = { version = "0.2", optional = true }
# make rayon optional
rayon = { version = "1.10.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
html-escape = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
