[package]
name = "mssql"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.welds]
version = "0.4.11"
features = ["mssql", "postgres", "mysql"]

[dependencies.welds-connections]
version = "0.4.11"
features = ["mssql", "mssql-rust_decimal", "postgres", "mysql"]

[dependencies.tiberius]
version = "0.12.3"
features = ["rust_decimal"]

[dependencies.chrono]
version = "0.4.40"

[dependencies.sqlx]
version = "0.8.3"
features = ["chrono", "runtime-async-std", "rust_decimal", "json"]
